tests/errmsgs/t5282.nim
discard """
  errormsg: "illegal recursion in type 'x'"
"""

type x = distinct x
